ui/src/layouts/Header/header.scss
.header {
  --headerBg: transparent;
  background: var(--headerBg);
  top: 0;
  width: 100%;

  // height: var(--headerHeight);
  z-index: var(--headerLevel);
  position: absolute;
  // box-shadow: var(--elevation-2);
  .header__inner {
    position: relative;
    padding: 0 var(--space);
    margin: 0 auto;
    height: 100%;
    width: 100%;
    display: flex;
    .header__nav {
      flex-grow: 2;
      .dropdown-menu {
        background: transparent;
        position: absolute;
        left: var(--space);
        display: none;
        width: 230px;
      }
      .nav-dropdown {
        position: relative;
        &:hover .dropdown-menu,
        &:focus-within .dropdown-menu {
          display: block;
          padding: var(--smallSpace);
          visibility: visible;
          opacity: 1;
          background: var(--white);
          border-radius: var(--cardRadius);
          .nav-link {
            color: var(--textColor);
            margin-left: 0;
          }
        }
      }
      .nav-link {
        color: var(--white);
        margin-left: var(--space);
      }
    }
  }
  .menu-icon {
    outline: none;
    display: none;
  }
}

.mobile-menu-wrapper {
  position: fixed;
  top: 0;
  left: 0;
  align-items: center;
  height: 100vh;
  overflow-y: scroll;
  pointer-events: none;
  z-index: var(--highestLevel);
  .transport {
    width: 100%;
    .mobile-menu {
      padding: var(--largestSpace);
      background: var(--lightBlue);
      height: 100vh;
      width: 100vw;
      overflow-y: scroll;
      margin-right: 1rem;
      z-index: var(--highestLevel);
      .mobile-nav {
        .nav-link {
          list-style: none;
          display: block;
          margin: 30px 0;
          font-weight: 400;
          font-size: var(--h4);
        }
        a {
          margin-left: 0;
        }
      }
    }
  }
}

@media (max-width: 880px) {
  .header {
    .header__inner {
      justify-content: space-between;
      .logo {
        margin-top: 6px;
      }
      .menu-icon {
        display: block;
      }
      .header__nav {
        display: none;
      }
    }
  }
}

